cabal-version:       >=1.10
-- Initial package description 'harkamalRandhawaCheckers.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                harkamalRandhawaCheckers
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              BuildTools
maintainer:          unconfigured@null.spigotmc.org
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable harkamalRandhawaCheckers
  ghc-options:  -threaded
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  hs-source-dirs: src
  build-depends:        base
                      , checkers
                      , checkers-brick
  hs-source-dirs:      app
  default-language:    Haskell2010
